force-app/main/default/objects/pro_Status_Update__c/pro_Status_Update__c.object-meta.xml
<CustomObject>
    <description>Object to hold status object comments made across a variety of objects</description>
    <label>Status Update</label>
    <nameField>
        <displayFormat>Status Update - {0000000}</displayFormat>
        <label>Status Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>