force-app/main/default/objects/pro_Status_Update__c/fields/pro_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account on which a status update is being made</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Status Updates</relationshipLabel>
    <relationshipName>Status_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>