force-app/main/default/objects/pro_Status_Update__c/fields/pro_Claim__c.field-meta.xml
<CustomField>
    <fullName>pro_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Claim record on which a status update is being made</description>
    <label>Claim</label>
    <referenceTo>leaseworks__Claims__c</referenceTo>
    <relationshipLabel>Status Updates</relationshipLabel>
    <relationshipName>Status_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>