force-app/main/default/objects/pro_Status_Update__c/fields/pro_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Date__c</fullName>
    <description>The date of the status update</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>