force-app/main/default/objects/pro_Status_Update__c/fields/pro_Deal__c.field-meta.xml
<CustomField>
    <fullName>pro_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Deal on which Status Updates or Weekly Commercial / Legal team updates are to be tracked.</description>
    <label>Deal</label>
    <referenceTo>leaseworks__Marketing_Activity__c</referenceTo>
    <relationshipLabel>Status Updates</relationshipLabel>
    <relationshipName>Status_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>