force-app/main/default/objects/pro_Status_Update__c/fields/pro_Litigation__c.field-meta.xml
<CustomField>
    <fullName>pro_Litigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Litigation record on which a status update is being made</description>
    <label>Litigation</label>
    <referenceTo>Litigation__c</referenceTo>
    <relationshipLabel>Status Updates</relationshipLabel>
    <relationshipName>Status_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>