force-app/main/default/objects/pro_Status_Update__c/fields/pro_Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>pro_Technical_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fleet Project Management record on which a status update is being made</description>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipLabel>Status Updates</relationshipLabel>
    <relationshipName>Status_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>